Fix: edit button was always visible for all accounts
Now: only when hovered

--- a/client/sidebar.less
+++ b/client/sidebar.less
@@ -1,10 +1,10 @@
 .accounts-list-item {
-    .accounts-list-edit-icon {
+    .accounts-list-edit-button {
         visibility: hidden;
     }
 
     &:hover {
-        .accounts-list-edit-icon {
+        .accounts-list-edit-button {
             visibility: inherit;
         }
     }
